--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 								<li class="has-dropdown">
 									<a href="#">SERVICES</a>
 									<ul class="dropdown">
-										<li><a href="massage.html">Body Massage</a></li>
-										<li><a href="#">Body Scrub & Body Mask</a></li>
-										<li><a href="#">Foot Spa Packages</a></li>
-										<li><a href="#">Nail Services</a></li>
-										<li><a href="#">Packages</a></li>
-										<li><a href="#">Spa Party</a></li>
+										<li><a href="services_packages.html">Packages</a></li>
+										<li><a href="services_massage.html">Massages</a></li>
+										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
+										<li><a href="services_nail_services.html">Nail Services</a></li>
+										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
+										<li><a href="services_spa_party.html">Spa Party</a></li>
 									</ul>
 								</li>
 								<li><a href="#">PROMO</a></li>
