--- a/services_packages.html
+++ b/services_packages.html
@@ -23,7 +23,7 @@
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -40,7 +40,7 @@
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	
+
 	<!-- Date Picker -->
 	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
 	<!-- Flaticons  -->
@@ -58,12 +58,12 @@
 
 	</head>
 	<body>
-		
+
 	<div class="colorlib-loader"></div>
 
 	<div id="page">
 		<nav class="colorlib-nav" role="navigation">
-			<div class="top-menu" style="background-color: #ccb248;">
+			<div class="top-menu" style="background-color: #dac25c;">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-2">
@@ -73,15 +73,15 @@
 							<ul>
 								<li><a href="index.html">HOME</a></li>
 								<li><a href="#">PRODUCTS</a></li>
-								<li class="has-dropdown">
+								<li class="has-dropdown active_2">
 									<a href="#">SERVICES</a>
 									<ul class="dropdown">
-										<li><a href="#">Body Massage</a></li>
-										<li><a href="#">Body Scrub & Body Mask</a></li>
-										<li><a href="#">Foot Spa Packages</a></li>
-										<li><a href="#">Nail Services</a></li>
 										<li><a href="#">Packages</a></li>
-										<li><a href="#">Spa Party</a></li>
+										<li><a href="services_massage.html">Massages</a></li>
+										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
+										<li><a href="services_nail_services.html">Nail Services</a></li>
+										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
+										<li><a href="services_spa_party.html">Spa Party</a></li>
 									</ul>
 								</li>
 								<li><a href="#">PROMO</a></li>
@@ -103,7 +103,7 @@
 							<ul class="breadcrumb">
 								<li> Home</li>
 								<li> Services</li>
-								<li> Body Massage</li>
+								<li> Packages</li>
 							</ul>
 						</div>
 					</div>
@@ -121,30 +121,63 @@
 						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
 							<div class="row">
 								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-2.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+									<img width="1079" height="717" src="images/item-4.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
 									<p>&nbsp;</p>
 								</div>
 								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
 									<div class="content">
-										<h4>Massages</h4>
-										<h4 style="color: #dac25c">Body Massage</h4>
+										<h4>[ Packages ]</h4>
+										<h4 style="color: #dac25c">Signature Rituals</h4>
 										<ul class="colorlib-footer-links">
-											<li>Swedish Massage</li>
-											<li>Shiatsu Massage</li>
-											<li>Combination Massage</li>
-											<li>Deep Tissue Massage</li>
-											<li>Aromatherapy Massage</li>
-											<li>Hot Stone Massage</li>
-											<li>Signature Massage</li>
+											<li>Starry Night (Himalayan Pink Salt Body Scrub + Body Massage) <span style="color: #c3a54e">[ 90 / 120 mins ]</span></li>
+											<li>Signature Vinotherapie (Chardonnay Sugar Scrub + Signature Massage) <span style="color: #c3a54e">[ 120 mins ]</span></li>
+											<li>BCL Spa - Luxury Organic Spa (Body Scrub and Body Massage using Moroccan Argan Oil) <span style="color: #c3a54e">[ 120 mins ]</span></li>
+											<li>Le Purifiant (Himalayan Pink Salt Body Scrub + Volcanic Mud Body Mask + Body Massage) <span style="color: #c3a54e">[ 100 mins ]</span></li>
 										</ul>
 										<p></p>
-										<h4 style="color: #dac25c">Specific Massage</h4>
-										<ul class="colorlib-footer-links">
-											<li>Back Massage</li>
-											<li>Fountain of Youth Massage</li>
-											<li>Hand & Foot Massage</li>
-											<li>Foot Reflexology</li>
-										</ul>
+										<h4 style="color: #dac25c">Spa and Massage Packages</h4>
+										<!--ul class="colorlib-footer-links">
+											<li>Mind and Body Flow</li>
+											<li>Olympe</li>
+											<li>Classique</li>
+											<li>L'Euphorie</li>
+											<li>L'Eclat</li>
+											<li>BCL Spa - Luxury Organic Spa Experience</li>
+										</ul-->
+
+										<p></p>
+										<span style="color: #c3a54e">MIND AND BODY FLOW [ 2 hrs ]</span><br/>
+										Fountain of Youth + Choice of Classic Full Body Massage
+
+										<p></p>
+										<span style="color: #c3a54e">OLYMPE [ 2 hrs ]</span><br/>
+										Fountain of Youth + Choice of Classic Full Body Massage<br/>
+										Choice of Foot Reflexology or Organic Foot Spa<br/>
+
+										<p></p>
+										<span style="color: #c3a54e">CLASSIQUE [ 3 hrs ]</span><br/>
+										Choice of Classic Full Body Massage<br/>
+										Choice of Fountain of Youth or Foot Reflexology<br/>
+										Organic Foot Spa Treatment with Manicure and Pedicure<br/>
+
+										<p></p>
+										<span style="color: #c3a54e">L’ EUPHORIE [ 3 hrs 30 mins ]</span><br/>
+										Fountain of Youth + Choice of Classic Full Body Massage<br/>
+										Organic Foot Spa Treatment with Pedicure + Foot Reflexology<br/>
+										Choice of Hand Paraffin or Organic Hand Spa Treatment with Manicure<br/>
+
+										<p></p>
+										<span style="color: #c3a54e">L’ Éclat  [ 3 hrs 30 mins ]</span><br/>
+										Himalayan Pink Salt Body Scrub + Volcanic Mud Mask (Body Mask)<br/>
+										Choice of Classic Full Body Massage<br/>
+										Organic Foot Spa Treatment with Pedicure + Foot Reflexology<br/>
+
+										<p></p>
+										<span style="color: #c3a54e">BCL SPA - Luxury Organic Spa Experience [ 3 hrs 30 mins ]</span><br/>
+										BCL Spa Body Scrub<br/>
+										Signature Full Body Massage using BCL Spa Argan Oil<br/>
+										BCL Spa 4-Step Hands & Feet Treatment with Manicure and Pedicure<br/>
+
 									</div>
 								</div>
 							</div>
@@ -152,56 +185,16 @@
 						</div>
 						<div class="col-xs-12 col-md-pull-9 col-md-3">
 							<div>
-								<h4>Packages</h4>
-								<h4>Massages</h4>
-								<h4>Body Scrubs & Body Masks</h4>
-								<h4>Nail Services</h4>
-								<h4>Spa Party</h4>
-							</div>
-
-				<!--div class="container">
-
-					<div class="row row-pb-md">
-						<div class="col-md-4 colorlib-widget">
-							<h4>Packages</h4>
-							<p></p>
-							<h4 style="color: #dac25c">Body Massage</h4>
-							<p></p>
-							<h4>Body Scrub & Body Mask</h4>
-							<p></p>
-							<h4>Nail Services</h4>
-							<p></p>
-							<h4>Spa Party</h4>
-						</div>
-						<hr>
-						<div class="col-md-5">
-							<h4 style="color: #dac25c">Body Massage</h4>
-							<ul class="colorlib-footer-links">
-								<li>Swedish Massage</li>
-								<li>Shiatsu Massage</li>
-								<li>Combination Massage</li>
-								<li>Deep Tissue Massage</li>
-								<li>Aromatherapy Massage</li>
-								<li>Hot Stone Massage</li>
-								<li>Signature Massage</li>
-							</ul>
-							<p></p>
-							<h4 style="color: #dac25c">Specific Massage</h4>
-							<ul class="colorlib-footer-links">
-								<li>Back Massage</li>
-								<li>Fountain of Youth Massage</li>
-								<li>Hand & Foot Massage</li>
-								<li>Foot Reflexology</li>
-							</ul>
-						</div>
-						<div class="col-md-3">
-							<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-								<img width="1079" height="717" src="images/item-2.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+								<h4><a href="#">Packages</a></h4>
+								<h4><a href="services_massage.html" style="color: black">Massages</a></h4>
+								<h4><a href="services_body_scrubs.html" style="color: black">Body Scrubs & Body Masks</a></h4>
+								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
+								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
+								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
 							</div>
 						</div>
 					</div>
-				</div-->
-
+				</div>
 			</div>
 		</div>
 
@@ -257,7 +250,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
