--- a/services_body_scrubs.html
+++ b/services_body_scrubs.html
@@ -23,7 +23,7 @@
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -40,7 +40,7 @@
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	
+
 	<!-- Date Picker -->
 	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
 	<!-- Flaticons  -->
@@ -58,7 +58,7 @@
 
 	</head>
 	<body>
-		
+
 	<div class="colorlib-loader"></div>
 
 	<div id="page">
@@ -73,12 +73,12 @@
 							<ul>
 								<li><a href="index.html">HOME</a></li>
 								<li><a href="#">PRODUCTS</a></li>
-								<li class="has-dropdown">
+								<li class="has-dropdown active_2">
 									<a href="#">SERVICES</a>
 									<ul class="dropdown">
 										<li><a href="services_packages.html">Packages</a></li>
 										<li><a href="services_massage.html">Massages</a></li>
-										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
+										<li><a href="#">Body Scrubs & Body Masks</a></li>
 										<li><a href="services_nail_services.html">Nail Services</a></li>
 										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
 										<li><a href="services_spa_party.html">Spa Party</a></li>
@@ -86,32 +86,14 @@
 								</li>
 								<li><a href="#">PROMO</a></li>
 								<li><a href="#">MEMBERSHIP</a></li>
-								<li class="active_2"><a href="#">CONTACT</a></li>
+								<li><a href="contact.html">CONTACT</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</nav>
-		<!--aside id="colorlib-hero" class="breadcrumbs">
-			<div class="flexslider">
-				<ul class="slides">
-			   	<li style="background-image: url(images/cover-img-1.jpg);">
-			   		<div class="overlay"></div>
-			   		<div class="container-fluid">
-			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12 slider-text">
-				   				<div class="slider-text-inner text-center"-->
-				   					<!--h1>Contact</h1>
-				   					<h2 class="bread"><span><a href="index.html">Home</a></span> <span>Contact</span></h2-->
-				   				<!--/div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
-			  	</ul>
-		  	</div>
-		</aside-->
+
 
 		<section style="background-color: #f5f5f5; height: 39px;">
 			<div class="crumbs">
@@ -120,7 +102,8 @@
 						<div class="col-xs-12">
 							<ul class="breadcrumb">
 								<li> Home</li>
-								<li> Contact</li>
+								<li> Services</li>
+								<li> Massages</li>
 							</ul>
 						</div>
 					</div>
@@ -130,77 +113,49 @@
 
 		<div><p>&nbsp;</p></div>
 
-		<div id="colorlib-contact">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1">
-						<h3>Contact Information</h3>
-						<div class="row contact-info-wrap">
-							<div class="col-md-3">
-								<p><span><i class="icon-location"></i></span> 1st Level Phase 2, UP Town Center Katipunan Ave., Quezon City, Philippines</p>
+		<div>
+			<div class="crumbs">
+
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
+							<div class="row">
+								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
+									<img width="1079" height="717" src="images/item-4.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+									<p>&nbsp;</p>
+								</div>
+								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
+									<div class="content">
+										<h4>[ Body Scrubs and Body Masks ]</h4>
+										<h4 style="color: #dac25c">Body Scrubs</h4>
+										<ul class="colorlib-footer-links">
+											<li>Honey Body Polish <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>Sugar Cane with Honey <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>Coffee Body Scrub <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>Himalayan Pink Salt Body Scrub <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>BCL Spa Mandarin + Mango - Luxury Organic Spa Experience <span style="color: #c3a54e">[ 30 mins ]</span></li>
+										</ul>
+										<p></p>
+										<h4 style="color: #dac25c">Body Masks</h4>
+										<ul class="colorlib-footer-links">
+											<li>Rituel détoxifiant (Body Scrub + Volcanic Mud Mask) <span style="color: #c3a54e">[ 40 mins ]</span></li>
+										</ul>
+									</div>
+								</div>
 							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-phone3"></i></span> Mobile Number: + 63-956-866-3693</a></p>
-							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@lespanaturel.com">info@lespanaturel.com</a></p>
-							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-globe"></i></span> <a href="#">lespanaturel.com</a></p>
+							<hr>
+						</div>
+						<div class="col-xs-12 col-md-pull-9 col-md-3">
+							<div>
+								<h4><a href="services_packages.html" style="color: black">Packages</a></h4>
+								<h4><a href="services_massage.html" style="color: black">Massages</a></h4>
+								<h4><a href="#">Body Scrubs & Body Masks</a></h4>
+								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
+								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
+								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-10 col-md-offset-1">
-						<div class="contact-wrap">
-							<h3>Get In Touch</h3>
-							<form name="lsn" method="post" action="https://formspree.io/info@lespanaturel.com">
-								<div class="row form-group">
-									<!--div class="col-md-6 padding-bottom">
-										<label for="fname">First Name</label>
-										<input type="text" name="name" id="fname" class="form-control" placeholder="Your First Name">
-									</div>
-									<div class="col-md-6">
-										<label for="lname">Last Name</label>
-										<input type="text" id="lname" class="form-control" placeholder="Your Last Name">
-									</div-->
-                                    <div class="col-md-12">
-                                        <label for="name">Name</label>
-                                        <input type="text" name="name" id="name" class="form-control" placeholder="Your Name">
-                                    </div>
-
-                                </div>
-
-								<div class="row form-group">
-									<div class="col-md-12">
-										<label for="email">Email</label>
-										<input type="text" name="_replyto" id="email" class="form-control" placeholder="Your E-mail Address">
-									</div>
-								</div>
-
-								<div class="row form-group">
-									<div class="col-md-12">
-										<label for="subject">Subject</label>
-										<input type="text" name="_subject" id="subject" class="form-control" placeholder="Subject of this message">
-									</div>
-								</div>
-
-								<div class="row form-group">
-									<div class="col-md-12">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something to us"></textarea>
-									</div>
-								</div>
-								<div class="form-group text-center">
-									<input type="submit" value="Send Message" class="btn btn-primary">
-									<input type="hidden" name="_next" value="www.lespanaturel.com" />
-								</div>
-							</form>		
-						</div>
-					</div>
-
-                    <div class="col-md-8 col-md-offset-2">
-                        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=le%20spa%20naturel&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://camzzle.com"></a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-                    </div>
 				</div>
 			</div>
 		</div>
@@ -257,7 +212,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
