--- a/services_body_scrubs.html
+++ b/services_body_scrubs.html
@@ -103,7 +103,7 @@
 							<ul class="breadcrumb">
 								<li> Home</li>
 								<li> Services</li>
-								<li> Massages</li>
+								<li> Body Scrubs & Body Masks</li>
 							</ul>
 						</div>
 					</div>
