--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							<div class="col-md-6">
 								<a href="" class="f-product-2" style="background-image: url(images/item-4.jpg);">
 									<div class="desc">
-										<h2>BODY<br>SCRUBS</h2>
+										<h2>BODY<br>SCRUB</h2>
 									</div>
 								</a>
 							</div>
