--- a/services_body_scrubs.html
+++ b/services_body_scrubs.html
@@ -130,15 +130,17 @@
 										<h4 style="color: #dac25c">Body Scrubs</h4>
 										<ul class="colorlib-footer-links">
 											<li>Honey Body Polish <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>Sugar Cane with Honey <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>Coffee Body Scrub <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>Himalayan Pink Salt Body Scrub <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>BCL Spa Mandarin + Mango - Luxury Organic Spa Experience <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>Sugar Cane with Honey Body Scrub / For sensitive skin <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>Coffee Body Scrub / Stimulating and Firming <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>Himalayan Pink Salt Body Scrub / Detoxifying  <span style="color: #c3a54e">[ 30 mins ]</span></li>
+											<li>BCL Spa - Luxury Organic Spa Experience with Moroccan Argan Oil /
+												Mandarin + Mango Age Defying Citrus Extracts for younger, flawless and glowing skin.
+												<span style="color: #c3a54e">[ 30 mins ]</span></li>
 										</ul>
 										<p></p>
 										<h4 style="color: #dac25c">Body Masks</h4>
 										<ul class="colorlib-footer-links">
-											<li>Rituel détoxifiant (Body Scrub + Volcanic Mud Mask) <span style="color: #c3a54e">[ 40 mins ]</span></li>
+											<li>Rituel détoxifiant (Himalayan Pink Salt Body Scrub + Volcanic Mud Body Mask) / Detoxifying Body Treatment <span style="color: #c3a54e">[ 40 mins ]</span></li>
 										</ul>
 									</div>
 								</div>
