--- a/services_massage.html
+++ b/services_massage.html
@@ -134,7 +134,7 @@
 											<li>Combination Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
 											<li>Deep Tissue Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
 											<li>Aromatherapy Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Hot Stone Massage <span style="color: #c3a54e">[ 75 / 90 mins ]</span></li>
+											<li>Hot Stone Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
 											<li>Signature Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
 										</ul>
 										<p></p>
@@ -142,9 +142,12 @@
 										<ul class="colorlib-footer-links">
 											<li>Back Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
 											<li>Fountain of Youth Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
-											<li>Hand & Foot Massage <span style="color: #c3a54e">[ 45 / 60 mins ]</span></li>
+											<li>Hand & Foot Massage with Reflexology <span style="color: #c3a54e">[ 45 / 60 mins ]</span></li>
 											<li>Foot Reflexology <span style="color: #c3a54e">[ 30 / 45 / 60 mins ]</span></li>
 										</ul>
+										<p></p>
+										<p><em>* Private and couple rooms available.</em><br/>
+										<em>* Reflexology is done in a different area.</em></p>
 									</div>
 								</div>
 							</div>
