--- a/services_spa_party.html
+++ b/services_spa_party.html
@@ -76,12 +76,12 @@
 								<li class="has-dropdown active_2">
 									<a href="#">SERVICES</a>
 									<ul class="dropdown">
-										<li><a href="#">Packages</a></li>
+										<li><a href="services_packages.html">Packages</a></li>
 										<li><a href="services_massage.html">Massages</a></li>
 										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
 										<li><a href="services_nail_services.html">Nail Services</a></li>
 										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
-										<li><a href="services_spa_party.html">Spa Party</a></li>
+										<li><a href="#">Spa Party</a></li>
 									</ul>
 								</li>
 								<li><a href="#">PROMO</a></li>
@@ -103,7 +103,7 @@
 							<ul class="breadcrumb">
 								<li> Home</li>
 								<li> Services</li>
-								<li> Packages</li>
+								<li> Spa Party</li>
 							</ul>
 						</div>
 					</div>
@@ -113,7 +113,7 @@
 
 		<div><p>&nbsp;</p></div>
 
-		<div class="colorlib-blog">
+		<div>
 			<div class="crumbs">
 
 				<div class="container">
@@ -121,62 +121,65 @@
 						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
 							<div class="row">
 								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-4.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+									<img width="1079" height="717" src="images/item-1.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
 									<p>&nbsp;</p>
 								</div>
 								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
 									<div class="content">
-										<h4>[ Packages ]</h4>
-										<h4 style="color: #dac25c">Signature Rituals</h4>
-										<ul class="colorlib-footer-links">
-											<li>Starry Night (Himalayan Pink Salt Body Scrub + Body Massage) <span style="color: #c3a54e">[ 90 / 120 mins ]</span></li>
-											<li>Signature Vinotherapie (Chardonnay Sugar Scrub + Signature Massage) <span style="color: #c3a54e">[ 120 mins ]</span></li>
-											<li>BCL Spa - Luxury Organic Spa (Body Scrub and Body Massage using Moroccan Argan Oil) <span style="color: #c3a54e">[ 120 mins ]</span></li>
-											<li>Le Purifiant (Himalayan Pink Salt Body Scrub + Volcanic Mud Body Mask + Body Massage) <span style="color: #c3a54e">[ 100 mins ]</span></li>
-										</ul>
+										<h4>[ Spa Party ]</h4>
 										<p></p>
-										<h4 style="color: #dac25c">Spa and Massage Packages</h4>
-										<!--ul class="colorlib-footer-links">
-											<li>Mind and Body Flow</li>
-											<li>Olympe</li>
-											<li>Classique</li>
-											<li>L'Euphorie</li>
-											<li>L'Eclat</li>
-											<li>BCL Spa - Luxury Organic Spa Experience</li>
-										</ul-->
+										<span style="color: #c3a54e">A FRENCH RENDEZ-VOUS [ 6 pax, 3 hours ]</span><br/>
+										<span style="color: #c3a54e">Exclusive use of foot spa area. Noise must be kept at minimum.</span><br/>
+										Hand Paraffin + Manicure<br/>
+										Organic Foot Spa Treatment with Pedicure<br/>
+										Swedish Foot Massage with Reflexology (30 minutes)<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">MIND AND BODY FLOW [ 2 hours ]</span><br/>
-										Fountain of Youth + Choice of Classic Full Body Massage
+										<span style="color: #c3a54e">LE NIVEAU [ 10 pax, 4 hours ]</span><br/>
+										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
+										Fountain of Youth<br/>
+										Choice of 1 hour Classic Full Body Massage<br/>
+										Hand Paraffin<br/>
+										Organic Foot Spa Treatment with Pedicure<br/>
+										Swedish Foot Massage with Reflexology (30 minutes)<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">OLYMPE [ 2 hours ]</span><br/>
-										Fountain of Youth + Choice of Classic Full Body Massage<br/>
-										Choice of Foot Reflexology or Organic Foot Spa<br/>
+										<span style="color: #c3a54e">LE PRODIGIEUX [ 10 pax, 5 hours ]</span><br/>
+										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
+										Himalayan Pink Salt Body Scrub<br/>
+										Fountain of Youth<br/>
+										Choice of 1 hour Classic Full Body Massage<br/>
+										Hand Paraffin<br/>
+										Organic Foot Spa Treatment with Pedicure<br/>
+										Swedish Foot Massage with Reflexology (30 minutes)<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">CLASSIQUE [ 3 hours ]</span><br/>
-										Choice of Classic Full Body Massage<br/>
-										Choice of Fountain of Youth or Foot Reflexology<br/>
-										Organic Foot Spa Treatment with Manicure and Pedicure<br/>
+										<span style="color: #c3a54e">LA RENAISSANCE [ 10 pax, 6 hours ]</span><br/>
+										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
+										Himalayan Pink Salt Body Scrub<br/>
+										Volcanic Mud Mask (Body Mask)<br/>
+										Fountain of Youth<br/>
+										Choice of 1 hour Classic Full Body Massage<br/>
+										Hand Paraffin<br/>
+										Organic Foot Spa Treatment with Pedicure<br/>
+										Swedish Foot Massage with Reflexology (30 minutes)<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">L’ EUPHORIE [ 3 hours 30 mins ]</span><br/>
-										Fountain of Youth + Choice of Classic Full Body Massage<br/>
-										Organic Foot Spa Treatment with Pedicure + Foot Reflexology<br/>
-										Choice of Hand Paraffin or Organic Hand Spa Treatment with Manicure<br/>
-
-										<p></p>
-										<span style="color: #c3a54e">L’ Éclat  [ 3 hours 30 mins ]</span><br/>
-										Himalayan Pink Salt Body Scrub + Volcanic Mud Mask (Body Mask)<br/>
-										Choice of Classic Full Body Massage<br/>
-										Organic Foot Spa Treatment with Pedicure + Foot Reflexology<br/>
-
-										<p></p>
-										<span style="color: #c3a54e">BCL SPA - Luxury Organic Spa Experience with Moroccan Argan Oil [ 3 hours 30 mins ]</span><br/>
+										<span style="color: #c3a54e">BCL SPA - Luxury Organic Spa Experience with Moroccan Argan Oil [ 10 pax, 6 hours ]</span><br/>
+										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
 										BCL Spa Sugar Cane Body Scrub with Shea Butter<br/>
-										Signature Full Body Massage using BCL Spa Argan Oil<br/>
-										BCL Spa 4-Step Hands & Feet Treatment with Manicure and Pedicure<br/>
+										Fountain of Youth<br/>
+										1 hour BCL Spa Classic Full Body Massage<br/>
+										BCL Spa 4-Step Hand Spa Treatment with Manicure<br/>
+										BCL Spa 4-Step Foot Spa Treatment with Pedicure<br/>
+										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+
+										<p></p>
+										<span style="color: #c3a54e">LE PETIT (all guests must be < 13 years old) [ 6 pax, 2.5 hours ]</span><br/>
+										<span style="color: #c3a54e">Exclusive use of foot spa area. Noise must be kept at minimum.</span><br/>
+										Organic Hand Spa Treatment with Manicure<br/>
+										Organic Foot Spa Treatment with Pedicure<br/>
+										Swedish Hand and Foot Massage (45 minutes)<br/>
 
 									</div>
 								</div>
@@ -185,12 +188,12 @@
 						</div>
 						<div class="col-xs-12 col-md-pull-9 col-md-3">
 							<div>
-								<h4><a href="#">Packages</a></h4>
+								<h4><a href="services_packages.html" style="color: black">Packages</a></h4>
 								<h4><a href="services_massage.html" style="color: black">Massages</a></h4>
 								<h4><a href="services_body_scrubs.html" style="color: black">Body Scrubs & Body Masks</a></h4>
 								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
 								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
-								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
+								<h4><a href="#">Spa Party</a></h4>
 							</div>
 						</div>
 					</div>
