--- a/services_body_scrubs.html
+++ b/services_body_scrubs.html
@@ -126,22 +126,47 @@
 								</div>
 								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
 									<div class="content">
-										<h4>[ Body Scrubs and Body Masks ]</h4>
-										<h4 style="color: #dac25c">Body Scrubs</h4>
-										<ul class="colorlib-footer-links">
-											<li>Honey Body Polish <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>Sugar Cane with Honey Body Scrub / For sensitive skin <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>Coffee Body Scrub / Stimulating and Firming <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>Himalayan Pink Salt Body Scrub / Detoxifying  <span style="color: #c3a54e">[ 30 mins ]</span></li>
-											<li>BCL Spa - Luxury Organic Spa Experience with Moroccan Argan Oil /
-												Mandarin + Mango Age Defying Citrus Extracts for younger, flawless and glowing skin.
-												<span style="color: #c3a54e">[ 30 mins ]</span></li>
-										</ul>
+										<h4>[ Body Scrubs ]</h4>
+
 										<p></p>
-										<h4 style="color: #dac25c">Body Masks</h4>
-										<ul class="colorlib-footer-links">
-											<li>Rituel détoxifiant (Himalayan Pink Salt Body Scrub + Volcanic Mud Body Mask) / Detoxifying Body Treatment <span style="color: #c3a54e">[ 40 mins ]</span></li>
-										</ul>
+										<span style="color: #c3a54e">Gommage au Miel / Honey Body Polish</span><br/>
+										A lavish mix of dead sea salt, honey, and natural oils to slough off dead skin and make your skin feel smoother.
+										<span style="color: #c3a54e">[ 30 mins ]</span>
+
+										<p></p>
+										<span style="color: #c3a54e">Gommage au Miel et Sucre / Sugar Cane with Honey Body Buff</span><br/>
+										A gentle type of exfoliator ideal for sensitive skin that will make your skin soft, supple, and glowing.
+										<span style="color: #c3a54e">[ 30 mins ]</span>
+
+										<p></p>
+										<span style="color: #c3a54e">Gommage au Café / Stimulant et raffermit</span><br/>
+										<span style="color: #c3a54e">Coffee Body Scrub / Stimulating and Firming</span><br/>
+										Coffee is rich in antioxidants that help prevent premature aging and believed to fight cellulite.
+										<span style="color: #c3a54e">[ 30 mins ]</span>
+
+										<p></p>
+										<span style="color: #c3a54e">Gommage au sel rose de l'Himalaya / Détoxifiant</span><br/>
+										<span style="color: #c3a54e">Himalayan Pink Salt Scrub / Detoxifying Treatment</span><br/>
+										Detoxify using the purest salt on earth! Eliminate toxins and nourish your skin with the minerals and trace elements of the Himalayan Pink Salt. This treatment is the perfect balance of exfoliation, hydration, and nutrition.
+
+										<span style="color: #c3a54e">[ 30 mins ]</span>
+
+										<p></p>
+										<span style="color: #c3a54e">BCL Spa - Luxury Organic Spa Experience with Moroccan Argan Oil</span><br/>
+										<span style="color: #c3a54e">Mandarin + Mango – Age Defying Citrus Extracts for younger, flawless and glowing skin.</span><br/>
+										This deluxe treatment naturally removes tired skin cells with Cane Sugar Exfoliation, leaving your skin silky smooth.<br/>
+										Key Ingredients: Argan Oil from Morocco, Olive Oil, Macadamia Seed Oil, Meadowfoam Seed Oil, Shea Butter, Kelp.
+										<span style="color: #c3a54e">[ 30 mins ]</span>
+
+										<p></p>
+										<h4>[ Body Mask ]</h4>
+										<p></p>
+										<span style="color: #c3a54e">Rituel détoxifiant / Detoxifying Body Treatment</span><br/>
+										<span style="color: #c3a54e">(Himalayan Pink Salt Body Scrub + Volcanic Mud Body Mask)</span><br/>
+										For a deep, detoxifying cleanse, this treatment starts with Himalayan Pink Salt body scrub that is a powerful and unparalleled detoxifier, to heal, soothe, and revitalize your skin. This treatment is followed by a body mask made of volcanic ash, which purifies your skin by sucking out impurities like grime, pollution, and germs from the pores.
+										<span style="color: #c3a54e">[ 40 mins ]</span>
+
+										<p></p>
 									</div>
 								</div>
 							</div>
