--- a/services_footspa.html
+++ b/services_footspa.html
@@ -80,8 +80,8 @@
 										<li><a href="services_massage.html">Massages</a></li>
 										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
 										<li><a href="services_nail_services.html">Nail Services</a></li>
-										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
-										<li><a href="#">Spa Party</a></li>
+										<li><a href="#">Foot Spa Packages</a></li>
+										<li><a href="services_spa_party.html">Spa Party</a></li>
 									</ul>
 								</li>
 								<li><a href="#">PROMO</a></li>
@@ -103,7 +103,7 @@
 							<ul class="breadcrumb">
 								<li> Home</li>
 								<li> Services</li>
-								<li> Spa Party</li>
+								<li> Foot Spa Packages</li>
 							</ul>
 						</div>
 					</div>
@@ -121,65 +121,42 @@
 						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
 							<div class="row">
 								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-9.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+									<img width="1079" height="717" src="images/item-3.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
 									<p>&nbsp;</p>
 								</div>
 								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
 									<div class="content">
-										<h4>[ Spa Party ]</h4>
+										<h4>[ Foot Spa Packages ]</h4>
 										<p></p>
-										<span style="color: #c3a54e">A FRENCH RENDEZ-VOUS [ 6 pax, 3 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of foot spa area. Noise must be kept at minimum.</span><br/>
-										Hand Paraffin + Manicure<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+										<span style="color: #c3a54e">Baron / Baroness</span><br/>
+										For the client on the go! Reveal beautifully soft skin with exfoliation using an all-natural scrub followed by foot massage.<br/>
+
+										<ul>
+											<li>Organic Foot Spa </li>
+											<li>Organic Foot Spa with Pedicure</li>
+											<li>Organic Foot Spa with Manicure and Pedicure</li>
+											<li>Hand Spa Treatment with Manicure + Organic Foot Spa with Pedicure</li>
+										</ul>
 
 										<p></p>
-										<span style="color: #c3a54e">LE NIVEAU [ 10 pax, 4 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										Fountain of Youth<br/>
-										Choice of 1 hour Classic Full Body Massage<br/>
-										Hand Paraffin<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+										<span style="color: #c3a54e">Marquis / Marquise</span><br/>
+										<span style="color: #c3a54e">Organic Foot Spa Treatment (Whitening | Detoxifying | Anti-aging & Firming)</span><br/>
+										This treatment starts with a warm, healing Epsom Salt Foot Soak to soften hard, callused skin and flush out toxins. Exfoliation is done next to remove dead skin, followed by a foot mask for deep conditioning. This treatment finishes off with a soothing foot and leg massage.
+										<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">LE PRODIGIEUX [ 10 pax, 5 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										Himalayan Pink Salt Body Scrub<br/>
-										Fountain of Youth<br/>
-										Choice of 1 hour Classic Full Body Massage<br/>
-										Hand Paraffin<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+										<span style="color: #c3a54e">King / Queen</span><br/>
+										<span style="color: #c3a54e">Organic Foot Spa Treatment with Foot Reflexology and Foot Massage</span><br/>
+										This treatment starts with a warm healing Epsom Salt Foot Soak, followed by Himalayan Pink Salt Scrub – the purest salt on earth – to exfoliate and moisturize the skin. Complete this experience with a detoxifying Volcanic Mud Mask and Foot Reflexology + Foot Massage.
+										<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">LA RENAISSANCE [ 10 pax, 6 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										Himalayan Pink Salt Body Scrub<br/>
-										Volcanic Mud Mask (Body Mask)<br/>
-										Fountain of Youth<br/>
-										Choice of 1 hour Classic Full Body Massage<br/>
-										Hand Paraffin<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
-
-										<p></p>
-										<span style="color: #c3a54e">BCL SPA - Luxury Organic Spa Experience with Moroccan Argan Oil [ 10 pax, 6 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										BCL Spa Sugar Cane Body Scrub with Shea Butter<br/>
-										Fountain of Youth<br/>
-										1 hour BCL Spa Classic Full Body Massage<br/>
-										BCL Spa 4-Step Hand Spa Treatment with Manicure<br/>
-										BCL Spa 4-Step Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
-
-										<p></p>
-										<span style="color: #c3a54e">LE PETIT (all guests must be < 13 years old) [ 6 pax, 2.5 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of foot spa area. Noise must be kept at minimum.</span><br/>
-										Organic Hand Spa Treatment with Manicure<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Hand and Foot Massage (45 minutes)<br/>
+										<span style="color: #c3a54e">BCL Spa Revitalizing 4-Step Spa Treatment - Luxury Organic Spa Experience with Moroccan Argan Oil</span><br/>
+										<span style="color: #c3a54e">Mandarin + Mango – Age Defying Citrus Extracts for younger, flawless and glowing skin.</span><br/>
+										Pamper and relax your tired feet by treating them to an imported organic Dead Sea Salt Soak infused with Argan Oil from Morocco. This deluxe treatment naturally removes tired skin cells with Cane Sugar Exfoliation, leaving your skin silky smooth and prepares them for a Luxurious Moisture Mask, infused with fruit extracts, to renew your skin. Complete the treatment with an anti-oxidant-rich Massage Cream filled with natural oils to make your skin naturally soft and radiant.
+										<br/>
+										Key Ingredients: Argan Oil from Morocco, Olive Oil, Macadamia Seed Oil, Meadowfoam Seed Oil, Shea Butter, Kelp.
+										<br/>
 
 										<p></p>
 									</div>
@@ -193,8 +170,8 @@
 								<h4><a href="services_massage.html" style="color: black">Massages</a></h4>
 								<h4><a href="services_body_scrubs.html" style="color: black">Body Scrubs & Body Masks</a></h4>
 								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
-								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
-								<h4><a href="#">Spa Party</a></h4>
+								<h4><a href="#">Foot Spa Packages</a></h4>
+								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
 							</div>
 						</div>
 					</div>
