--- a/services_packages.html
+++ b/services_packages.html
@@ -126,16 +126,43 @@
 								</div>
 								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
 									<div class="content">
-										<h4>[ Packages ]</h4>
-										<h4 style="color: #dac25c">Signature Rituals</h4>
+										<!--h4>[ Packages ]</h4-->
+										<h4>[ Signature Rituals ]</h4>
+										<p></p>
+										<span style="color: #c3a54e">Nuit des Étoiles / Starry Night</span><br/>
+										<span style="color: #c3a54e">(Himalayan Pink Salt Scrub + Body Massage)</span><br/>
+										Detoxify using the purest salt on earth – Himalayan Pink Salt – which balances your body’s pH levels. The scrub is followed by a relaxing massage that relieve stress and tension in your body. (Choice of Swedish or Aromatherapy)
+										<span style="color: #c3a54e">[ 90 / 120 mins ]</span>
+
+										<p></p>
+										<span style="color: #c3a54e">Signature Vinothérapie</span><br/>
+										<span style="color: #c3a54e">(Chardonnay Sugar Scrub + Signature Massage)</span><br/>
+										Pamper yourself with our Signature Vinotherapy – a body polish made with red wine and infused with resveratrol, which has anti-aging benefits. The treatment is completed with our Signature massage.
+										<span style="color: #c3a54e">[ 120 mins ]</span>
+
+										<p></p>
+										<span style="color: #c3a54e">BCL Spa - Luxury Organic Spa Experience</span><br/>
+										<span style="color: #c3a54e">(BCL Spa Mandarin + Mango Body Scrub & Massage)</span><br/>
+										This treatment provides an experience of total relaxation while leaving the skin nourished and healthy-looking. The world’s most certified organic ingredients are blended with Argan Oil from Morocco to create a purely organic experience.<br/>
+										Key Ingredients: Argan Oil from Morocco, Olive Oil, Macadamia Seed Oil, Meadowfoam Seed Oil, Shea Butter, Kelp.
+										<span style="color: #c3a54e">[ 120 mins ]</span>
+
+										<p></p>
+										<span style="color: #c3a54e">Le Purifiant / Detoxifying Body Treatment</span><br/>
+										<span style="color: #c3a54e">(Body Scrub + Body Mask + Body Massage)</span><br/>
+										This treatment begins with Himalayan Body Scrub to slough off dead skin and make your skin feel smoother and healthier, followed by a body mask made of volcanic ash to purify skin, and is completed with a classic full body massage.
+										<span style="color: #c3a54e">[ 100 mins ]</span>
+
+										<p></p>
+										<!--p></p>
 										<ul class="colorlib-footer-links">
 											<li>Starry Night (Himalayan Pink Salt Body Scrub + Body Massage) <span style="color: #c3a54e">[ 90 / 120 mins ]</span></li>
 											<li>Signature Vinotherapie (Chardonnay Sugar Scrub + Signature Massage) <span style="color: #c3a54e">[ 120 mins ]</span></li>
 											<li>BCL Spa - Luxury Organic Spa (Body Scrub and Body Massage using Moroccan Argan Oil) <span style="color: #c3a54e">[ 120 mins ]</span></li>
 											<li>Le Purifiant (Himalayan Pink Salt Body Scrub + Volcanic Mud Body Mask + Body Massage) <span style="color: #c3a54e">[ 100 mins ]</span></li>
 										</ul>
-										<p></p>
-										<h4 style="color: #dac25c">Spa and Massage Packages</h4>
+										<p></p-->
+										<h4>[ Spa and Massage Packages ]</h4>
 										<!--ul class="colorlib-footer-links">
 											<li>Mind and Body Flow</li>
 											<li>Olympe</li>
@@ -155,29 +182,30 @@
 										Choice of Foot Reflexology or Organic Foot Spa<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">CLASSIQUE [ 3 hours ]</span><br/>
+										<span style="color: #c3a54e">CLASSIQUE [ 3 hours ++ ]</span><br/>
 										Choice of Classic Full Body Massage<br/>
 										Choice of Fountain of Youth or Foot Reflexology<br/>
 										Organic Foot Spa Treatment with Manicure and Pedicure<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">L’ EUPHORIE [ 3 hours 30 mins ]</span><br/>
+										<span style="color: #c3a54e">L’ EUPHORIE [ 3 hours 30 mins ++ ]</span><br/>
 										Fountain of Youth + Choice of Classic Full Body Massage<br/>
 										Organic Foot Spa Treatment with Pedicure + Foot Reflexology<br/>
 										Choice of Hand Paraffin or Organic Hand Spa Treatment with Manicure<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">L’ Éclat  [ 3 hours 30 mins ]</span><br/>
+										<span style="color: #c3a54e">L’ Éclat  [ 3 hours 30 mins ++ ]</span><br/>
 										Himalayan Pink Salt Body Scrub + Volcanic Mud Mask (Body Mask)<br/>
 										Choice of Classic Full Body Massage<br/>
 										Organic Foot Spa Treatment with Pedicure + Foot Reflexology<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">BCL SPA - Luxury Organic Spa Experience with Moroccan Argan Oil [ 3 hours 30 mins ]</span><br/>
+										<span style="color: #c3a54e">BCL SPA - Luxury Organic Spa Experience with Moroccan Argan Oil [ 3 hours 30 mins ++ ]</span><br/>
 										BCL Spa Sugar Cane Body Scrub with Shea Butter<br/>
 										Signature Full Body Massage using BCL Spa Argan Oil<br/>
 										BCL Spa 4-Step Hands & Feet Treatment with Manicure and Pedicure<br/>
 
+										<p></p>
 									</div>
 								</div>
 							</div>
