--- a/services_nail_services.html
+++ b/services_nail_services.html
@@ -79,9 +79,9 @@
 										<li><a href="services_packages.html">Packages</a></li>
 										<li><a href="services_massage.html">Massages</a></li>
 										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
-										<li><a href="services_nail_services.html">Nail Services</a></li>
+										<li><a href="#">Nail Services</a></li>
 										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
-										<li><a href="#">Spa Party</a></li>
+										<li><a href="services_spa_party.html">Spa Party</a></li>
 									</ul>
 								</li>
 								<li><a href="#">PROMO</a></li>
@@ -103,7 +103,7 @@
 							<ul class="breadcrumb">
 								<li> Home</li>
 								<li> Services</li>
-								<li> Spa Party</li>
+								<li> Nail Services</li>
 							</ul>
 						</div>
 					</div>
@@ -121,65 +121,51 @@
 						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
 							<div class="row">
 								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-9.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+									<img width="1079" height="717" src="images/item-3.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
 									<p>&nbsp;</p>
 								</div>
 								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
 									<div class="content">
-										<h4>[ Spa Party ]</h4>
+										<h4>[ Nail Services ]</h4>
 										<p></p>
-										<span style="color: #c3a54e">A FRENCH RENDEZ-VOUS [ 6 pax, 3 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of foot spa area. Noise must be kept at minimum.</span><br/>
-										Hand Paraffin + Manicure<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+										<span style="color: #c3a54e">HAND AND FOOT CARE</span><br/>
+										MANICURE<br/>
+										PEDICURE<br/>
+										MANICURE + PEDICURE<br/>
+										FRENCH TIP<br/>
+										HAND SPA TREATMENT<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">LE NIVEAU [ 10 pax, 4 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										Fountain of Youth<br/>
-										Choice of 1 hour Classic Full Body Massage<br/>
-										Hand Paraffin<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+										<span style="color: #c3a54e">GEL</span><br/>
+										GEL MANICURE<br/>
+										GEL PEDICURE<br/>
+										GEL MANICURE + GEL PEDICURE<br/>
+										GEL FRENCH TIP<br/>
+										GEL OMBRE<br/>
+										GEL POLISH REMOVAL<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">LE PRODIGIEUX [ 10 pax, 5 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										Himalayan Pink Salt Body Scrub<br/>
-										Fountain of Youth<br/>
-										Choice of 1 hour Classic Full Body Massage<br/>
-										Hand Paraffin<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+										<span style="color: #c3a54e">NAIL EXTENSION</span><br/>
+										VIRTUAL NAILS<br/>
+										DIP POWDER MANICURE (WITH NAIL TIPS)<br/>
+										DIP POWDER MANICURE<br/>
+										DIP POWDER FRENCH TIP<br/>
+										DIP POWDER OMBRE<br/>
+										ACRYLIC DIP POWDER REMOVAL<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">LA RENAISSANCE [ 10 pax, 6 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										Himalayan Pink Salt Body Scrub<br/>
-										Volcanic Mud Mask (Body Mask)<br/>
-										Fountain of Youth<br/>
-										Choice of 1 hour Classic Full Body Massage<br/>
-										Hand Paraffin<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
+										<span style="color: #c3a54e">PARAFFIN TREATMENT</span><br/>
+										HAND PARAFFIN<br/>
+										FOOT PARAFFIN<br/>
+										HAND PARAFFIN + MANICURE<br/>
+										FOOT PARAFFIN + PEDICURE<br/>
+										HAND SPA PARAFFIN + MANICURE + FOOT SPA PARAFFIN + PEDICURE<br/>
+										HAND & FOOT PARAFFIN + 1 HR HAND & FOOT MASSAGE W/ REFLEXOLOGY<br/>
 
 										<p></p>
-										<span style="color: #c3a54e">BCL SPA - Luxury Organic Spa Experience with Moroccan Argan Oil [ 10 pax, 6 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of spa.</span><br/>
-										BCL Spa Sugar Cane Body Scrub with Shea Butter<br/>
-										Fountain of Youth<br/>
-										1 hour BCL Spa Classic Full Body Massage<br/>
-										BCL Spa 4-Step Hand Spa Treatment with Manicure<br/>
-										BCL Spa 4-Step Foot Spa Treatment with Pedicure<br/>
-										Swedish Foot Massage with Reflexology (30 minutes)<br/>
-
-										<p></p>
-										<span style="color: #c3a54e">LE PETIT (all guests must be < 13 years old) [ 6 pax, 2.5 hours ]</span><br/>
-										<span style="color: #c3a54e">Exclusive use of foot spa area. Noise must be kept at minimum.</span><br/>
-										Organic Hand Spa Treatment with Manicure<br/>
-										Organic Foot Spa Treatment with Pedicure<br/>
-										Swedish Hand and Foot Massage (45 minutes)<br/>
+										<span style="color: #c3a54e">ADD-ONS</span><br/>
+										UPGRADE POLISH (OPI, ESSIE, CND, ORLY)<br/>
+										UPGRADE POLISH (ZOYA, SECHE GEL EFFECT, ESSIE GEL COUTURE 14-DAY WEAR)<br/>
 
 										<p></p>
 									</div>
@@ -192,9 +178,9 @@
 								<h4><a href="services_packages.html" style="color: black">Packages</a></h4>
 								<h4><a href="services_massage.html" style="color: black">Massages</a></h4>
 								<h4><a href="services_body_scrubs.html" style="color: black">Body Scrubs & Body Masks</a></h4>
-								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
+								<h4><a href="#">Nail Services</a></h4>
 								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
-								<h4><a href="#">Spa Party</a></h4>
+								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
 							</div>
 						</div>
 					</div>
