--- a/services_footspa.html
+++ b/services_footspa.html
@@ -130,7 +130,7 @@
 										<p></p>
 										<span style="color: #c3a54e">Baron / Baroness</span><br/>
 										For the client on the go! Reveal beautifully soft skin with exfoliation using an all-natural scrub followed by foot massage.<br/>
-
+										<p></p>
 										<ul>
 											<li>Organic Foot Spa </li>
 											<li>Organic Foot Spa with Pedicure</li>
@@ -143,12 +143,23 @@
 										<span style="color: #c3a54e">Organic Foot Spa Treatment (Whitening | Detoxifying | Anti-aging & Firming)</span><br/>
 										This treatment starts with a warm, healing Epsom Salt Foot Soak to soften hard, callused skin and flush out toxins. Exfoliation is done next to remove dead skin, followed by a foot mask for deep conditioning. This treatment finishes off with a soothing foot and leg massage.
 										<br/>
+										<p></p>
+										<ul>
+											<li>Organic Foot Spa Treatment</li>
+											<li>Organic Foot Spa Treatment with Pedicure</li>
+											<li>Organic Hands & Feet Treatment with Manicure & Pedicure</li>
+										</ul>
 
 										<p></p>
 										<span style="color: #c3a54e">King / Queen</span><br/>
 										<span style="color: #c3a54e">Organic Foot Spa Treatment with Foot Reflexology and Foot Massage</span><br/>
 										This treatment starts with a warm healing Epsom Salt Foot Soak, followed by Himalayan Pink Salt Scrub – the purest salt on earth – to exfoliate and moisturize the skin. Complete this experience with a detoxifying Volcanic Mud Mask and Foot Reflexology + Foot Massage.
 										<br/>
+										<p></p>
+										<ul>
+											<li>Foot Spa Treatment with Foot Reflexology and Foot Massage</li>
+											<li>Foot Spa Treatment with Foot Reflexology and Foot Massage + Pedicure</li>
+										</ul>
 
 										<p></p>
 										<span style="color: #c3a54e">BCL Spa Revitalizing 4-Step Spa Treatment - Luxury Organic Spa Experience with Moroccan Argan Oil</span><br/>
@@ -157,6 +168,12 @@
 										<br/>
 										Key Ingredients: Argan Oil from Morocco, Olive Oil, Macadamia Seed Oil, Meadowfoam Seed Oil, Shea Butter, Kelp.
 										<br/>
+										<p></p>
+										<ul>
+											<li>BCL 4-Step Hand Spa Treatment with Manicure </li>
+											<li>BCL 4-Step Foot Spa Treatment with Pedicure </li>
+											<li>BCL 4-Step Hands & Feet Treatment with Manicure & Pedicure</li>
+										</ul>
 
 										<p></p>
 									</div>
