--- a/contact.html
+++ b/contact.html
@@ -134,6 +134,16 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
+						<h3>Reservations</h3>
+						<p>For reservations, kindly contact us via + 63-956-866-3693 and provide the ff. information:</p>
+						<ul>
+							<li>Name and Contact Number</li>
+							<li>Date and Time of Appointment</li>
+							<li>Number of Pax</li>
+							<li>Services to be Availed</li>
+						</ul>
+
+						<p>&nbsp;</p>
 						<h3>Contact Information</h3>
 						<div class="row contact-info-wrap">
 							<div class="col-md-3">
